[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/svg/radar.png" type="Texture" id=2]
[ext_resource path="res://assets/hud/menu_access_button.png" type="Texture" id=3]
[ext_resource path="res://assets/hud/action_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/hud/action_button_pressed_2.png" type="Texture" id=5]
[ext_resource path="res://assets/hud/around_moving_stick.png" type="Texture" id=6]
[ext_resource path="res://assets/hud/stick.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 150.0

[node name="HUD" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ViewportContainer" type="ViewportContainer" parent="Control" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1

[node name="radar" type="AnimatedSprite" parent="Control/ViewportContainer" index="0"]

visible = false
position = Vector2( 1248, 672 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Menu_Access" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1270.0
margin_right = 1334.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="TouchScreenButton" type="TouchScreenButton" parent="." index="2"]

position = Vector2( 1112.61, 531.051 )
scale = Vector2( 1.09821, 1.09821 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )
bitmask = null
shape = null
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="TouchScreenButton2" type="TouchScreenButton" parent="." index="3"]

position = Vector2( 211.418, 549.221 )
normal = null
pressed = null
bitmask = null
shape = SubResource( 2 )
shape_centered = false
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="border" type="Sprite" parent="." index="4"]

position = Vector2( 211.854, 549.347 )
scale = Vector2( 4.86205, 4.84582 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Material", "Pause", "Region", "Transform", "Visibility", "Z Index" ]

[node name="Joystick" type="Sprite" parent="." index="5"]

position = Vector2( 211.883, 545.234 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Offset" ]

[connection signal="pressed" from="Menu_Access" to="." method="_on_Menu_Access_pressed"]

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]

[connection signal="pressed" from="TouchScreenButton2" to="." method="_on_TouchScreenButtonMove_pressed"]

[connection signal="released" from="TouchScreenButton2" to="." method="_on_TouchScreenButtonMove_released"]


